--- a/gradle.properties
+++ b/gradle.properties
@@ -9,8 +9,8 @@ org.gradle.jvmargs=-Xmx1G
 
 # Mod Properties
 	mod_version=0.0.0
-	maven_group=com
-	archives_base_name=example
+	maven_group=dev.drtheo
+	archives_base_name=aitip
 
 # Dependencies
 	# check this on https://modmuss50.me/fabric.html
@@ -18,3 +18,4 @@ org.gradle.jvmargs=-Xmx1G
 	ait_version=b13b5d43ed
 	cloth_version = 11.0.99
 	modmenu_version=7.0.1
+	ip_version = v3.3.9-mc1.20.1
